--- a/style.css
+++ b/style.css
@@ -41,12 +41,24 @@ nav{
   color: #fff;
 }
 
+.nav-left li{
+  margin-bottom: 20px;
+}
+
 .home{
   background-image: url(./img/header.jpg);
   background-size: cover;
   max-width: 100%;
   min-height: 90vh;
   background-position: center;
+}
+.home-content{
+  padding-top: 150px;
+  padding-left: 50px;
+}
+.home-content h1{
+  font-size: 60px;
+  color: rgb(242, 0, 255);
 }
 .lessons-flex{
   display: flex;
